--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
     "seed": "node seed.js"
   },
   "dependencies": {
-    "better-sqlite3": "^12.6.2",
     "cors": "^2.8.5",
     "dotenv": "^17.3.1",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
+    "better-sqlite3": "^12.6.2",
     "concurrently": "^9.1.0",
     "lucide-react": "^0.460.0",
     "react": "^18.3.1",
