--- a/k8s.yaml
+++ b/k8s.yaml
@@ -25,6 +25,8 @@ spec:
           value: "8000"
         - name: NODE_ENV
           value: "production"
+        - name: MOCK_AUTH_ROLE
+          value: "admin"
         - name: DATABASE_URL
           valueFrom:
             secretKeyRef:
